// Vitest Snapshot v1

exports[`should be reactive 1`] = `
<root>
  <div>
    <span>
      Count is 
      <!--$-->
      1
      <!--/$-->
    </span>
    <!--$-->
    <input
      type="number"
    />
  </div>
</root>
`;

exports[`should be reactive 2`] = `
<root>
  <div>
    <span>
      Count is 
      <!--$-->
      2
      <!--/$-->
    </span>
    <!--$-->
    <input
      type="number"
    />
  </div>
</root>
`;

exports[`should be reactive 3`] = `
<root>
  <div>
    <span>
      Count is 
      <!--$-->
      3
      <!--/$-->
    </span>
    <!--$-->
    <input
      type="number"
    />
  </div>
</root>
`;

exports[`should render components 1`] = `
<root>
  Text
  <div>
    Text
  </div>
  <div>
    <!--$-->
    Child Text
  </div>
  <div>
    <!--$-->
    Child Text
  </div>
  <div>
    Text
  </div>
  <div>
    <!--$-->
  </div>
</root>
`;

exports[`should render element 1`] = `
<root>
  <div />
</root>
`;

exports[`should render fragment 1`] = `
<root>
  <div />
  <div />
  <div />
</root>
`;

exports[`should render observable component 1`] = `
<root>
  <!--$$-->
  <span>
    <!--$-->
    1
    <!--/$-->
  </span>
  <span>
    <!--$-->
    1
    <!--/$-->
  </span>
  <!--/$-->
</root>
`;

exports[`should render observable component 2`] = `
<root>
  <!--$$-->
  <span>
    Foo
  </span>
  <span>
    Bar
  </span>
  <!--/$-->
</root>
`;
